[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uwa-replay"
version = "0.2.1"
description = "A package for replaying signals through underwater acoustic channels."
authors = [{name = "Zhengnan Li", email = "uwa-channels@ofdm.link"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py"
]

[project.urls]
Homepage = "https://github.com/uwa-channels/python"
Documentation = "https://uwa-channels.github.io/"
Repository = "https://github.com/uwa-channels/python"
Issues = "https://github.com/uwa-channels/python/issues"

