[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uwa-replay"
version = "0.3.2"
description = "A package for replaying signals through underwater acoustic channels."
authors = [{name = "Zhengnan Li", email = "uwa-channels@ofdm.link"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/uwa-channels/python"
Documentation = "https://uwa-channels.github.io/"
Repository = "https://github.com/uwa-channels/python"
Issues = "https://github.com/uwa-channels/python/issues"
